[gd_scene load_steps=4 format=3 uid="uid://bk7uxw1ljabfb"]

[ext_resource type="Script" path="res://Scripts/backDrops.gd" id="1_jg3cn"]
[ext_resource type="PackedScene" uid="uid://nabkptkm2u1j" path="res://Scene/Times/shopScene.tscn" id="2_4bch1"]
[ext_resource type="PackedScene" uid="uid://4bxr83lwdvxf" path="res://Scene/Times/morning.tscn" id="4_cojli"]

[node name="BackDrops" type="Node2D"]
script = ExtResource("1_jg3cn")

[node name="Scene1Parent" type="Node2D" parent="."]

[node name="Morning" parent="Scene1Parent" instance=ExtResource("4_cojli")]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Scene1Parent"]
z_index = 2
position = Vector2(320, 166)

[node name="Scene2Parent" type="Node2D" parent="."]
position = Vector2(640, 0)

[node name="Shop" parent="Scene2Parent" instance=ExtResource("2_4bch1")]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Scene2Parent"]
z_index = 2
position = Vector2(324.428, 176)

[node name="Button" type="Button" parent="."]
z_index = 3
offset_left = 408.0
offset_top = 296.0
offset_right = 453.0
offset_bottom = 327.0
text = "Next"

[node name="Timer" type="Timer" parent="."]
process_callback = 0

[connection signal="pressed" from="Button" to="." method="nextPhase"]
[connection signal="timeout" from="Timer" to="." method="moveRectToRightmostPos"]
